--- a/paras/public/index.html
+++ b/paras/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" type="text/css" href="first.css">
+    <link rel="stylesheet" type="text/css" href="first.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -41,16 +41,22 @@
       To create a production bundle, use `npm run build` or `yarn build`.
       -->
 
-  <footer>
+    <footer>
       <div class="footer-container">
-        <p>&copy; 2024 Tic-Tac-Toe Game</p>
+        <p>&copy; 2024 Tic-Tac-Toe Games</p>
         <ul class="social-links">
-          <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li>
+            <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+          </li>
         </ul>
         <p>Developed by SaanyaGarg</p>
       </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
